# FRI-NRG-geometry-to-volume-conversion-tool

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
assets/mesh-sample-01/: mesh-sample-01_torus.blend  mesh-sample-01_torus.glb  mesh-sample-01_torus.gltf  mesh-sample-01_torus_subdivided.gltf  mesh-sample-01_torus_textured.gltf  mesh-sample-01_torus_textured_v2.gltf
assets/mesh-sample-02/: mesh-sample-02_simple-cube.blend  mesh-sample-02_simple-cube.glb  mesh-sample-02_simple-cube.gltf
assets/simple-triangle/: simple-triangle.blend  simple-triangle.gltf
src/: camera_controller.rs  cli.rs  logging.rs  main.rs  scene_loader.rs  scene_viewer_plugin.rs  voxelizer.rs
src/exporter/: mod.rs
src/visualization/: mod.rs
src/voxelizer/: aabb.rs  grid.rs  mod.rs  voxel.rs
