[package]
name = "nrg-mesh-to-volume-conversion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-gltf = "1.1.2"
nalgebra = "0.32.5"
glam = "0.27.0"

clap = { version = "4.5.4", features = ["derive"] }

# Error handling
miette = { version = "7.2.0", features = ["fancy"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
